fix unreadable card headers

--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -15,7 +15,7 @@
 
 	> header {
 		background-color: var(--main-background-color);
-		color: var(--text-color);
+		color: var(--inverted-text-color);
 		font-size: 2em;
 		grid-area: header;
 		margin-bottom: var(--gutter);
